<resources>
    <string name="app_name">TicTacToe</string>
    <string name="title_activity_menu">Yet another TicTacToe</string>
    <string name="title_activity_game">Yet another TicTacToe</string>
    <string name="choose_size">Choose size of the board</string>
    <string name="choose_opponent">Choose your opponent</string>
    <string name="choose_difficulty">Choose difficulty level</string>
    <string name="choose_difficulty_spinner">Choose difficulty</string>
    <string name="opponent_human">Human</string>
    <string name="opponent_ai">AI</string>
    <string name="start_game_button">Start game!</string>
    <string name="playerOneTurn">Player 1 turn</string>
    <string name="playerTwoTurn">Player 2 turn</string>
    <string name="playerOneWin">Player 1 wins!</string>
    <string name="playerTwoWin">Player 2 wins!</string>
    <string name="draw">Draw!</string>

    <string-array name="difficulties">
        <item>Easy</item>
        <item>Hard</item>
    </string-array>

</resources>
